# indesign-idml

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE_PLAN.md  SECURITY_IMPLEMENTATION_PLAN.md  deny.toml
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: designmap_parse.rs  spread_parse.rs  story_parse.rs
scripts/: checks.sh  generate-sbom.sh  reproducible_build_check.sh  validate-release-metadata.sh
src/: archive.rs  encoding.rs  error.rs  lib.rs  prelude.rs  traits.rs  xml.rs
src/core/: mod.rs  resolver.rs  units.rs
src/model/: designmap.rs  document.rs  mod.rs  resources.rs  spread.rs  story.rs
tests/: idml_text_cli.rs
