[package]
name = "indesign-idml-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT OR Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
indesign-idml = { path = "..", features = ["serde"] }
libfuzzer-sys = "0.4"

[[bin]]
name = "designmap_parse"
path = "fuzz_targets/designmap_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "story_parse"
path = "fuzz_targets/story_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "spread_parse"
path = "fuzz_targets/spread_parse.rs"
test = false
doc = false
bench = false
